# udacity-computer-vision-P1-facial-keypoints

./: .gitignore  1. Load and Visualize Data.ipynb  2. Define the Network Architecture.ipynb  3. Facial Keypoint Detection, Complete Pipeline.ipynb  4. Fun with Keypoints.ipynb  data_load.py  models.py  pyproject.toml  requirements.txt
